# zokrates_credential

./: Cargo.toml  README.md
RustZoCrypto/: Cargo.toml
RustZoCrypto/src/: field.rs  babyjubjub.rs  eddsa.rs  field.rs  lib.rs  utils.rs
src/: credential.rs  issuer.rs  lib.rs  verifier.rs
zok/issuer/: create_hash.zok
zok/prover/: proof.json
zok/prover/2/: verify_credential.zok
zok/prover/3/: verify_credential.zok
zok/prover/5/: verify_credential.zok
zok/verifier/: verify_credential.zok
zokrates_credential_cli/: Cargo.toml
zokrates_credential_cli/src/: main.rs
zokrates_credential_core/: Cargo.toml  build.rs
zokrates_credential_core/src/: credential.rs  issuer.rs  lib.rs  prover.rs  verifier.rs
zokrates_credential_core/zok/: create_signature.py
zokrates_crypto/: Cargo.toml
zokrates_crypto/src/: babyjubjub.rs  eddsa.rs  field.rs  utils.rs
